tenant returns: enums, regulator FK normalization, lazy instance materialization + escalation, bidirectional obligation linking
- ReturnStage/ReturnFilingStatus/RegulatoryReturnStatus enums with autoApply converters (DB keeps friendly strings)
- regulatory_returns.tenant_regulator_id FK to tenant_regulators; CreateReturnRequest.tenantRegulatorId; regulatorLabel snapshot+FK fallback
- Lazy ensureInstances (frequency-aware 1/3/6/12mo, month-end clamp, UNIQUE(return_id,period), 60d backfill) replaces createNextInstance; calendar window today-60..+90
- Lazy catchUpEscalations on read; thresholds 2,5 -> L1/L2/L3; return_escalated audit (SYSTEM_USER_ID=0); submit resets escalation
- Bidirectional linking: existing obligation->returns + new GET/PUT /returns/{id}/obligations (LinkObligationsRequest), audits link_obligations
- Migrations V6+V14 edited in place (no new ALTER files); dev DB delta + flyway repair
- Frontend: ReturnsPage escalation chips/alert, CreateReturnDialog regulator Autocomplete + Linked Obligations picker, api.js links
- AGENTS.md: Returns module enhancements section